--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <title>Socket.IO</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="./require.js"></script>
     <script src="./app.js"></script>
+    <style type="text/css">
+      html, body {
+        width:  100%;
+        height: 100%;
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <div id="map">
