--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO</title>
+    <title>cc3k.io</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./require.js"></script>
     <script src="./app.js"></script>
